Issue #398 Query, Read, and Delete + small edits

--- a/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -9,14 +9,15 @@ import TabItem from '@theme/TabItem';
 <p>Ensure you have the Node Package Manager, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
 :::
 
-<h2>Installation</h2>
-
-Commands below will be done in your terminal.
-
+# Installation
 <h4>1. Create Directory:</h4>
 <p>This will be the home of your new Web5 app.</p>
-<pre>mkdir web5-app</pre>
-<pre>cd web5-app</pre>
+
+In terminal:
+```code
+mkdir web5-app
+cd web5-app
+```
 
 <h4>2. Install Web5:</h4>
 
@@ -44,7 +45,7 @@ This should look like:
 
 <h4>3. Import Dependencies:</h4>
 
-Copy to come about why we need to import dependencies and why we're creating a filename called index.js.
+TBD: Copy to come on why we need to import dependencies and why we're creating a filename called index.js.
 
 <pre>mkdir src</pre>
 
@@ -52,7 +53,7 @@ Copy to come about why we need to import dependencies and why we're creating a f
 
 <pre>touch index.js</pre>
 
-Open `web5-app/index.js` in your editor and paste at the top:
+Open `web5-app/index.js` in your editor and paste this at the top:
 ```js
 import { Web5 } from '@tbd54566975/web5'
 ```
