--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -19,7 +19,6 @@ console.log('write data', data);
 Now run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
-Output should look like this:
-### GETTING A MODULE ERROR SO I'm BLOCKED HERE WILL COME BACK TO THIS
+Output should look like this (blocked, module error):
 
 ### Play around without opening terminal, click `Run!` to register your DID from the sandbox above, `web5.did.register`:
