--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -1,4 +1,4 @@
-## 3. Storage, `web5.dwn`:
+## 3. Storage, `web5.dwn.records`:
 
 Now you’re able to write / store your app's data in what we call a Decentralized Web Node (DWN). A DWN is a personal data store - a platform for messages, pictures, videos, medical records, and just about any content a user may want to store.
 
@@ -24,13 +24,12 @@ console.log('write result', writeResult);
 Run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
-Output should look like this:
-### GETTING A MODULE ERROR SO I'm BLOCKED HERE WILL COME BACK TO THIS
+Output should look like this (blocked, module error):
 
 :::note
-
 The `dataFormat` value isn’t limited to `image/png`; it can be any `MIME` type.
-
 :::
 
-Practice writing something:
+### Play around without opening terminal, upload a random image and click `Run!` to store it with `web5.dwn.records.write`:
+
+*I think we should be adding in info about where this DWN storage is? And if it persists and how can I see the 'table'?*
