Issue #398 Grammer and clarity edits

--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -14,7 +14,7 @@ Web5 is split into three main top-level objects:
 - web5.did
 - web5.vc
 
-Let’s first focus on the `web5.did` namespace to continue building our app.
+We're going to focus on `web5.did` and `web3.dwn` namespace in this quickstart.
 
 ## 1. Create DID, `web5.did`:
 
