--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -16,7 +16,7 @@ const data = 'Hello Web5';
 console.log('write data', data);
 ```
 
-Now run `index.js` in terminal:
+Run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
 Output should look like this (blocked, module error):
