--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -30,6 +30,6 @@ Output should look like this (blocked, module error):
 The `dataFormat` value isn’t limited to `image/png`; it can be any `MIME` type.
 :::
 
-### Play around without opening terminal, upload a random image and click `Run!` to store it with `web5.dwn.records.write`:
+### Play around without opening terminal, upload an image and click `Run!` to store it with `web5.dwn.records.write`:
 
 *I think we should be adding in info about where this DWN storage is? And if it persists and how can I see the 'table'?*
