--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,6 +1,6 @@
 ## 5. Delete, `web5.dwn.records.delete`:
 
-And lastly, here is how you can delete from DWNs if you have permission to do so. Similar to reading, we’re using the `recordId` to remove the record.
+And lastly, here is how you can delete data from a DWN if you have permission to do so. Similar to reading, we’re using the `recordId` to remove the record.
 
 Add this to `index.js`:
 ```js
@@ -18,4 +18,4 @@ Run `index.js` in terminal:
 
 Output should look like this (blocked, module error):
 
-### Play around without opening terminal, click `Run!` on last time to delete the data stored, `web5.dwn.records.delete`:
+### Play around without opening terminal, click `Run!` one last time to delete the data stored, `web5.dwn.records.delete`:
