--- a/docs/web5/_quickstart-06-query-record.mdx
+++ b/docs/web5/_quickstart-06-query-record.mdx
@@ -25,4 +25,4 @@ Run `index.js` in terminal:
 
 Output should look like this (blocked, module error):
 
-### Play around without opening terminal, click `Run!` to query for some information about the data you just wrote, `web5.dwn.records.query`:
+### Play around without opening terminal, click `Run!` to query for information about the data you just wrote, `web5.dwn.records.query`:
