Issue #398 Unblocked all outputs have been added

--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -19,6 +19,7 @@ console.log('write data', data);
 Run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
-Output should look like this (blocked, module error):
+Output should look like this:
+<pre>write data Hello Web5</pre>
 
 ### Play around without opening terminal, click `Run!` to register your DID from the sandbox above, `web5.did.register`:
