--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -16,6 +16,13 @@ console.log('delete result', deleteResult);
 Run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
-Output should look like this (blocked, module error):
+Output should look like this:
+```code
+delete result MessageReply {
+  status: { code: 202, detail: 'Accepted' },
+  entries: undefined,
+  data: undefined
+}
+```
 
 ### Play around without opening terminal, click `Run!` one last time to delete the data stored, `web5.dwn.records.delete`:
