Issue #398 Moved summary to the next steps page, cleaner to me, and add  ToDo next steps index.js gist

--- a/docs/web5/_quickstart-09-next-steps.mdx
+++ b/docs/web5/_quickstart-09-next-steps.mdx
@@ -1,4 +1,16 @@
-# Next Steps:
+# Summary
+
+Here is what your index.js should look like in the end. 
+
+Congrats! You've just created a local DWN to serve as your user's
+personal data store. Given a user's DID and appropriate permissions,
+your app can read, write, or delete data from the user's DWN, while
+leaving them full control of their content. Other apps can query local
+storage to determine if the user already has a DWN on their device, and
+can also read and write from this same data store - essentially, making
+the user's data portable across multiple applications.
+
+## Next Steps:
 
 :::info
 The source code for the interactive parts of this Quickstart is available 
