Issue #398, more grammer edits

--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -25,7 +25,7 @@ can [learn more about them here](/docs/web5/learn/decentralized-identifiers) as
 a core concept behind Web5.
 :::
 
-For some context, in the world of Web5, a user’s unique identifier, like an email address, is called a DID. This is a decentralized app so we need an identifier that isn’t tied to a centralized authority. It can be used to identify and associate a user’s data across any platform.
+In the world of Web5 a user’s unique identifier, like an email address, is called a DID. This is a decentralized app so we need an identifier that isn’t tied to a centralized authority. It can be used to identify and associate a user’s data across any platform.
 
 Let’s create a DID using the Web5 API with the <code>ion</code> method name:
 
