--- a/docs/web5/_quickstart-07-read-record.mdx
+++ b/docs/web5/_quickstart-07-read-record.mdx
@@ -21,7 +21,7 @@ Run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
 Output should look like this:
-```js
+```code
 read result MessageReply {
   status: { code: 200, detail: 'OK' },
   entries: undefined,
