--- a/docs/web5/_quickstart-06-query-record.mdx
+++ b/docs/web5/_quickstart-06-query-record.mdx
@@ -26,7 +26,7 @@ Run `index.js` in terminal:
 <pre>node src/index.js</pre>
 
 Output should look like this:
-```js
+```code
 query result MessageReply {
   status: { code: 200, detail: 'OK' },
   entries: [
