add web5.js link

--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -22,5 +22,10 @@ import ApiCard from '@site/src/components/ApiCard';
       name="SSI SDK - Go Docs"
       description=" The ssi-sdk intends to provide flexible functionality based on a set of standards-based primitives for building decentralized identity applications in a modular manner: with limited dependencies between components."
     />
+    <ApiCard
+      url="https://tbd54566975.github.io/web5-js/"
+      name="Web5.js SDK"
+      description="The SDK sets out to gather the most of the used functionality from all three of these pillar technologies to provide a simple library that is as close to effortless as possible."
+    />
   </div>
 </div>
