--- a/docs/web5/_quickstart-09-next-steps.mdx
+++ b/docs/web5/_quickstart-09-next-steps.mdx
@@ -1,6 +1,6 @@
 # Summary
 
-Here is what your index.js should look like in the end. 
+Click <a href="/static/tutorial/index.js" download>here</a> to download what your final index.js file should look like after all steps above.
 
 Congrats! You've just created a local DWN to serve as your user's
 personal data store. Given a user's DID and appropriate permissions,
@@ -20,5 +20,4 @@ The source code for the interactive parts of this Quickstart is available
 [here](https://github.com/TBD54566975/web5-quickstart-widgets/blob/main/index.html) as a
 single HTML file. You may run the examples here, open the file directly in your 
 browser, or see it deployed [here](https://moonlit-centaur-0d7b4f.netlify.app/).
-
 :::
