Updated all new breaking changes to code examples in quickstart, and copy changes

--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -32,10 +32,11 @@ Let’s create a DID using the Web5 API with the <code>ion</code> method name. R
 
 *We’re using ION here as the method name, learn more about other method names [here](https://www.w3.org/TR/did-core/#methods).*
 
-:::note
-To see the DID you just created add `console.log(did.id)` to `index.js` and in terminal run `node src/index.js`.
+## Test this out:
+
+### Option 1. In `index.js`:
+Add `console.log(did.id)` and in terminal run `node src/index.js`
 
 Output should look like: `did:ion:EiBSuKWKAC0zpoM3KlhoyZxCHaMN5TBbcr...`
-:::
 
-### Click `Run!` to create a DID in the browser:
+### Option 2. Click `Run!` below to create a DID in the browser:
