--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -2,23 +2,27 @@
 
 When you instantiate Web5, the SDK internally creates a Decentralized Web Node (explained in next step) to act as a personal data store to hold your DID keys.
 
-Store your DID as well as save and encrypt your keys with `web5.did.manager`. Paste in `index.js`:
+Store your DID as well as save and encrypt your keys with `web5.did.manager`. Add this to `index.js`:
 
 ```js
-await web5.did.manager.set({
+await web5.did.manager.set(did.id, {
     connected: true,
-    did: did.id,
     endpoint: 'app://dwn',
-    keys: did.keys[0].keypair,
+    keys: {
+        ['#dwn']: {
+          keyPair: did.keys.find(key => key.id === 'dwn').keyPair,
+        },
+    },
 });
 
 const data = 'Hello Web5';
 ```
 
-:::note
-To confirm your keys were set add `console.log('write data', data);` to `index.js` and in terminal run `node src/index.js`.
+## Test this out:
 
-Output should say: `write data Hello Web5`.
-:::
+### Option 1. In `index.js`:
+Add `console.log('write data', data);`
 
-### Click `Run!` to set your keys from the sandbox above:
+Output should say: `write data Hello Web5`
+
+### Option 2. Click `Run!` to set your keys from last step:
