--- a/docs/web5/_quickstart-09-next-steps.mdx
+++ b/docs/web5/_quickstart-09-next-steps.mdx
@@ -1,6 +1,6 @@
 # Summary
 
-Click <a href="/static/tutorial/index.js" download>here</a> to download what your final index.js file should look like after all steps above.
+Click [here](/files/index.js) to download what your final index.js file should look like after all steps above
 
 Congrats! You've just created a local DWN to serve as your user's
 personal data store. Given a user's DID and appropriate permissions,
