removing extra 'the'

--- a/docs/web5/_quickstart-07-read-record.mdx
+++ b/docs/web5/_quickstart-07-read-record.mdx
@@ -11,4 +11,4 @@ let readResult = await web5.dwn.records.read(did.id, {
 });
 ```
 
-Let's have a look at the data the stored earlier:
+Let's have a look at the data stored earlier:
